src/other/mico-2.3.12/test/idl/error/case2.idl

/*
 * Can not inherit from an incomplete interface definition.
 */

interface A;

interface B : A
{};

interface A 
{
};
